web/app/themes/Foody/resources/sass/common/_brands-bar.scss
@import "../variables-site/structure";
.brands-container{
  display: none;
}

.brands-toggle-mobile{
  display: block;
  height: 100px;
  text-align: center;
  line-height: 100px;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 140px;
  z-index: 9999999999999;

  .navbar-toggler{
    height: 55px;
    width: 55px;
    border-radius: 50%;
    background-image: linear-gradient(34deg, #ec3849, #f35644);
    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.13);
    color: #fff;
    vertical-align: middle;
    display: inline-block;
    font-family: AfekBold;
    position: fixed;
    bottom: 22px;
    font-size: 0.7rem;
    font-weight: bold;
    padding: 2%;
  }

  .brands-avenue-mobile{
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    min-height: 100%;
    width: 0;
    transition: all .4s;
    opacity: 0;
    z-index: 9999999999999;
    background-color: white;
    overflow-y: scroll;
    padding-bottom: 80px;

    .close{
      display: inline-block;

      &.hide{
        display: none;
      }
    }

    .brands-container-mobile{
      .brands-title{
        width: 50%;
        text-align: center;
        color: $color__primary;
        margin: 3% auto;
      }

      .brands-list{
        list-style: none;

        li.brand-item-container{
          margin: 9% auto;
          text-align: center;

          img{
            max-width: 150px;
            margin: auto;
          }
        }
      }
    }

    &.open {
      width: 80%;
      opacity: 1;

      button.close {
        padding: 10px;
        position: absolute;
        left: 20px;
        top: 10px;
        z-index: 1;
      }

      .show-recipes-container {
        display: block;
        button {

        }
      }
    }
  }
}

@include breakpoint(desktop) {
  .brands-toggle-mobile {
    display: none;
  }

  .brands-container{
    display: flex;
    position: absolute;
    text-align: right;
    //left: calc((#{$site-width} - 100vw)/2);
    left: 0;
    flex-direction: column;
    width: calc((100vw - #{$site-width})/2);
    height: calc(100% - 480px);
    overflow: scroll;
    align-items: center;


    .brands-title{
      width: 50%;
      text-align: center;
      margin: 2%;
      color: $color__primary;
      font-size: 2vw;
    }

    ul.brands-list{
      margin-left: 0;
      li.brand-item-container{
        list-style: none;
        margin: 12% 0;

        img{
          //max-width: 150px;
          max-width: 80%;
        }
      }
    }
  }
}

